i changed the background of the text

--- a/style/style.css
+++ b/style/style.css
@@ -14,11 +14,16 @@ img{
 	text-align:center;
 	font-weight:500;
 	font-size:100;
-	margin-top:-10;
+	
 }
 .ama1{
 	text-align:center;
 	font-weight:800;
 	font-size:20;
 	margin-top:-60;
+
+}
+
+div{
+	background-color:black;
 }
